--- a/build.gradle
+++ b/build.gradle
@@ -55,10 +55,16 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.7.1')
 }
 
-//java {
-//    withJavadocJar()
-//    withSourcesJar()
-//}
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+pluginBundle {
+    website = 'https://github.com/bijukunjummen/gcp-cloudfunction-gradle-plugin'
+    vcsUrl = 'https://github.com/bijukunjummen/gcp-cloudfunction-gradle-plugin'
+    tags = ['gcp', 'java', 'serverless']
+}
 
 gradlePlugin {
     plugins {
