--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,11 @@ tasks.snapshot {
 }
 
 tasks.candidate {
-    finalizedBy tasks.publish
+    finalizedBy tasks.publishPlugins
 }
 
 tasks.final {
-    finalizedBy tasks.publish
+    finalizedBy tasks.publishPlugins
 }
 
 dependencies {
